if 'k8' in arch_set
    mpn_hdr_map += {
            'gmp-mparam.h': 'mpn/x86_64w/k8/gmp-mparam.h.in'
    }
    
    mpn_src_map += {
        'add_err1_n': 'mpn/x86_64w/k8/add_err1_n.asm',
        'add_nc': 'mpn/x86_64w/k8/add_n.asm',
        'add_n': 'mpn/x86_64w/k8/add_n.asm',
        'addadd_n': 'mpn/x86_64w/k8/addadd_n.asm',
        'addlsh1_n': 'mpn/x86_64w/k8/addlsh1_n.asm',
        'addlsh_n': 'mpn/x86_64w/k8/addlsh_n.asm',
        'addlsh_nc': 'mpn/x86_64w/k8/addlsh_n.asm',
        'inclsh_n': 'mpn/x86_64w/k8/addmul_1.asm',
        'addmul_1': 'mpn/x86_64w/k8/addmul_1.asm',
        'addmul_2': 'mpn/x86_64w/k8/addmul_2.asm',
        'addsub_n': 'mpn/x86_64w/k8/addsub_n.asm',
        'and_n': 'mpn/x86_64w/k8/and_n.asm',
        'andn_n': 'mpn/x86_64w/k8/andn_n.asm',
        'com_n': 'mpn/x86_64w/k8/com_n.asm',
        'copyd': 'mpn/x86_64w/k8/copyd.asm',
        'copyi': 'mpn/x86_64w/k8/copyi.asm',
        'divexact_byff': 'mpn/x86_64w/k8/divexact_byff.asm',
        'divrem_hensel_qr_1_1': 'mpn/x86_64w/k8/divrem_hensel_qr_1_1.asm',
        'divrem_hensel_qr_1_2': 'mpn/x86_64w/k8/divrem_hensel_qr_1_2.asm',
        'divrem_hensel_r_1': 'mpn/x86_64w/k8/divrem_hensel_r_1.asm',
        'double': 'mpn/x86_64w/k8/double.asm',
        'half': 'mpn/x86_64w/k8/half.asm',
        'hamdist': 'mpn/x86_64w/k8/hamdist.asm',
        'ior_n': 'mpn/x86_64w/k8/ior_n.asm',
        'iorn_n': 'mpn/x86_64w/k8/iorn_n.asm',
        'karaadd': 'mpn/x86_64w/k8/karaadd.asm',
        'karasub': 'mpn/x86_64w/k8/karasub.asm',
        'lshift': 'mpn/x86_64w/k8/lshift.asm',
        'lshift1': 'mpn/x86_64w/k8/lshift1.asm',
        'lshift2': 'mpn/x86_64w/k8/lshift2.asm',
        'lshift3': 'mpn/x86_64w/k8/lshift3.asm',
        'lshift4': 'mpn/x86_64w/k8/lshift4.asm',
        'lshift5': 'mpn/x86_64w/k8/lshift5.asm',
        'lshift6': 'mpn/x86_64w/k8/lshift6.asm',
        'lshiftc': 'mpn/x86_64w/k8/lshiftc.asm',
        'mod_1_1': 'mpn/x86_64w/k8/mod_1_1.asm',
        'mod_1_2': 'mpn/x86_64w/k8/mod_1_2.asm',
        'mod_1_3': 'mpn/x86_64w/k8/mod_1_3.asm',
        'mul_1': 'mpn/x86_64w/k8/mul_1.asm',
        'mul_2': 'mpn/x86_64w/k8/mul_2.asm',
        'mul_basecase': 'mpn/x86_64w/k8/mul_basecase.asm',
        'k8_mbc1': 'mpn/x86_64w/k8/mul_basecase.asm',
        'k8_mbc2': 'mpn/x86_64w/k8/mul_basecase.asm',
        'nand_n': 'mpn/x86_64w/k8/nand_n.asm',
        'nior_n': 'mpn/x86_64w/k8/nior_n.asm',
        'not': 'mpn/x86_64w/k8/not.asm',
        'popcount': 'mpn/x86_64w/k8/popcount.asm',
        'redc_1': 'mpn/x86_64w/k8/redc_1.asm',
        'rsh1add_n': 'mpn/x86_64w/k8/rsh1add_n.asm',
        'rsh1sub_n': 'mpn/x86_64w/k8/rsh1sub_n.asm',
        'rsh_divrem_hensel_qr_1_1': 'mpn/x86_64w/k8/rsh_divrem_hensel_qr_1_1.asm',
        'rsh_divrem_hensel_qr_1_2': 'mpn/x86_64w/k8/rsh_divrem_hensel_qr_1_2.asm',
        'rshift': 'mpn/x86_64w/k8/rshift.asm',
        'rshift1': 'mpn/x86_64w/k8/rshift1.asm',
        'rshift2': 'mpn/x86_64w/k8/rshift2.asm',
        'store': 'mpn/x86_64w/k8/store.asm',
        'sub_err1_n': 'mpn/x86_64w/k8/sub_err1_n.asm',
        'sub_nc': 'mpn/x86_64w/k8/sub_n.asm',
        'sub_n': 'mpn/x86_64w/k8/sub_n.asm',
        'subadd_n': 'mpn/x86_64w/k8/subadd_n.asm',
        'sublsh1_n': 'mpn/x86_64w/k8/sublsh1_n.asm',
        'sublsh_n': 'mpn/x86_64w/k8/sublsh_n.asm',
        'sublsh_nc': 'mpn/x86_64w/k8/sublsh_n.asm',
        'declsh_n': 'mpn/x86_64w/k8/submul_1.asm',
        'submul_1': 'mpn/x86_64w/k8/submul_1.asm',
        'sumdiff_n': 'mpn/x86_64w/k8/sumdiff_n.asm',
        'udiv_qrnnd': 'mpn/x86_64w/k8/udiv_qrnnd.asm',
        'umul_ppmm': 'mpn/x86_64w/k8/umul_ppmm.asm',
        'xnor_n': 'mpn/x86_64w/k8/xnor_n.asm',
        'xor_n': 'mpn/x86_64w/k8/xor_n.asm',
    }

    subdir('k10')
endif