message('    enabling native: k8')

mpn_hdr_map += {
    'gmp-mparam.h': files('gmp-mparam.h.in')
}

mpn_src_map += {
    'add_err1_n': files('add_err1_n.asm'),
    'add_nc': files('add_n.asm'),
    'add_n': files('add_n.asm'),
    'addadd_n': files('addadd_n.asm'),
    'addlsh1_n': files('addlsh1_n.asm'),
    'addlsh_n': files('addlsh_n.asm'),
    'addlsh_nc': files('addlsh_n.asm'),
    'inclsh_n': files('addmul_1.asm'),
    'addmul_1': files('addmul_1.asm'),
    'addmul_2': files('addmul_2.asm'),
    'addsub_n': files('addsub_n.asm'),
    'and_n': files('and_n.asm'),
    'andn_n': files('andn_n.asm'),
    'com_n': files('com_n.asm'),
    'copyd': files('copyd.asm'),
    'copyi': files('copyi.asm'),
    'divexact_byff': files('divexact_byff.asm'),
    'divrem_hensel_qr_1_1': files('divrem_hensel_qr_1_1.asm'),
    'divrem_hensel_qr_1_2': files('divrem_hensel_qr_1_2.asm'),
    'divrem_hensel_r_1': files('divrem_hensel_r_1.asm'),
    'double': files('double.asm'),
    'half': files('half.asm'),
    'hamdist': files('hamdist.asm'),
    'ior_n': files('ior_n.asm'),
    'iorn_n': files('iorn_n.asm'),
    'karaadd': files('karaadd.asm'),
    'karasub': files('karasub.asm'),
    'lshift': files('lshift.asm'),
    'lshift1': files('lshift1.asm'),
    'lshift2': files('lshift2.asm'),
    'lshift3': files('lshift3.asm'),
    'lshift4': files('lshift4.asm'),
    'lshift5': files('lshift5.asm'),
    'lshift6': files('lshift6.asm'),
    'lshiftc': files('lshiftc.asm'),
    'mod_1_1': files('mod_1_1.asm'),
    'mod_1_2': files('mod_1_2.asm'),
    'mod_1_3': files('mod_1_3.asm'),
    'mul_1': files('mul_1.asm'),
    'mul_2': files('mul_2.asm'),
    'mul_basecase': files('mul_basecase.asm'),
    'nand_n': files('nand_n.asm'),
    'nior_n': files('nior_n.asm'),
    'not': files('not.asm'),
    'popcount': files('popcount.asm'),
    'redc_1': files('redc_1.asm'),
    'rsh1add_n': files('rsh1add_n.asm'),
    'rsh1sub_n': files('rsh1sub_n.asm'),
    'rsh_divrem_hensel_qr_1_1': files('rsh_divrem_hensel_qr_1_1.asm'),
    'rsh_divrem_hensel_qr_1_2': files('rsh_divrem_hensel_qr_1_2.asm'),
    'rshift': files('rshift.asm'),
    'rshift1': files('rshift1.asm'),
    'rshift2': files('rshift2.asm'),
    'store': files('store.asm'),
    'sub_err1_n': files('sub_err1_n.asm'),
    'sub_nc': files('sub_n.asm'),
    'sub_n': files('sub_n.asm'),
    'subadd_n': files('subadd_n.asm'),
    'sublsh1_n': files('sublsh1_n.asm'),
    'sublsh_n': files('sublsh_n.asm'),
    'sublsh_nc': files('sublsh_n.asm'),
    'declsh_n': files('submul_1.asm'),
    'submul_1': files('submul_1.asm'),
    'sumdiff_n': files('sumdiff_n.asm'),
    'udiv_qrnnd': files('udiv_qrnnd.asm'),
    'umul_ppmm': files('umul_ppmm.asm'),
    'xnor_n': files('xnor_n.asm'),
    'xor_n': files('xor_n.asm'),
}
